Hotel Room Backend Setup

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 CONNECTION_URL = mongodb+srv://agile:agile@cluster0.pthng.mongodb.net/HMS-Agile?retryWrites=true&w=majority
 JWT = 0202Kalij#$
+NODE_ENV = development
+Anup_Mongo_URL = mongodb+srv://anuplamsal:anuplamsal@cluster.p5jrb.mongodb.net/HMS-Agile?retryWrites=true&w=majority
